
# Distributed under the GNU General Public License version 2

# Originally authored by Daniel Robbins <drobbins@gentoo.org>
# Maintained August 2002 - April 2003 by Seth Chandler <sethbc@gentoo.org>
# Maintained and rewritten April 2004 - July 2007 by Aron Griffis <agriffis@n01se.net>
# Maintained July 2009 - present by Daniel Robbins <drobbins@funtoo.org>

* keychain 2.7.1 (07 May 2010)

  07 May 2010; Daniel Robbins <drobbins@funtoo.org>: New release process in
  Makefile and release.sh - keychain release tarball will now contain
  pre-generated keychain, keychain.1 and keychain.spec so that users do not
  need to run "make". Updated README.rst to refer to the "source code" as
  a "release archive" since it contains both source code and ready-to-go
  script and man page.

  14 Apr 2010; Daniel Robbins <drobbins@funtoo.org>: GPG fix from Gentoo bug
  203871; from Frederic Bathelery. This fix will fix the issue with pinentry
  starting in the background and not showing up in the terminal.

  20 Feb 2010; Daniel Robbins <drobbins@funtoo.org>: MacOS X documentation fix
  from James Turnbull.

* keychain 2.7.0 (23 Oct 2009)

  23 Oct 2009; Daniel Robbins <drobbins@funtoo.org>: updated README.rst with
  2.7.0 and MacOS X package update.

  18 Oct 2009; Daniel Robbins <drobbins@funtoo.org>: lockfile() replacement
  from Parallels Inc. OpenVZ code, takelock() rewrite, resulting in ~100 line
  code savings. Default lock timeout set to 5 seconds, and now keychain will try
  to forcefully acquire the lock if the timeout aborts, rather than simply
  failing and aborting.

  30 Sep 2009; Daniel Robbins <drobbins@funtoo.org>: MacOS X/BSD improvements:
  fix sed call in Makefile for MacOS X and presumably other *BSD environments,
  Rename COPYING to COPYING.txt, slight COPYING.txt formatting changes to
  allow license to display more cleanly from MacOS X .pkg automated install.
  Fixed POD errors (removed '=end').
